# video2text

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.cpu  LICENSE  README.md  design.md  docker-compose.yml  docker-install.sh  docker-push.sh  fastapi_app.py  install.sh  installCert.md  main.py  main.sh  pyproject.toml  run.sh  video2text.service
backend/: funasr_backend.py  whisper_backend.py
backends/: funasr_asr.py
core/: __init__.py  config.py  transcribe_logic.py
docker/: .dockerignore  Dockerfile  Dockerfile.optimized  REPO_OVERVIEW.md  build-gpu.sh  docker-compose.yml  docker-entrypoint.sh
docs/: README_zh.md  SSE_ANALYSIS.md  architecture.md  design.md  download-tools-report.md  integration-report.md  license-compliance-analysis.md  mcp-server.md  video-download-guide.md  video-download-tutorial.md  weixin-video-test-report.md
download-test/: gzh_video_downloader.py  test_tools.py  weixin_video_guide.md
logs/: nohup-ssl.out  nohup.out
scripts/: download_models.py  healthcheck.sh  install-service.sh  main.sh  start-xhs-downloader.sh  start_browser_debug_win11.bat  start_browser_debug_win11.ps1  video2text.service
src/: mcp_server.py
src/backends/: __init__.py  base_asr.py  base_translate.py  siliconflow_translate.py  vibevoice_asr.py  whisper_asr.py
src/core/: pipeline.py  transcribe_logic.py  workspace.py
src/tests/: test_subtitle_wrap.py  test_temp_video_management.py  test_text_correction.py  test_transcribe_worker.py
src/utils/: audio.py  online_models.py  xhs_downloader.py
src/video2text-rs/: Cargo.toml  pyproject.toml
src/video2text-rs/python/: ml_wrappers.py
src/video2text-rs/src/: main.rs
src/video2text-rs/src/core/: config.rs  mod.rs
tests/: test_app_settings.py  test_audio_upload.py  test_folder_text_download.py  test_profile_config.py  test_text_correction.py  test_transcribe_worker.py
utils/: audio.py  online_models.py  subtitle.py  translate.py
