[project]
name = "video2text"
version = "0.4.3"
description = "视频转文本字幕工具，插件化 ASR/翻译后端，四阶段流水线，NVIDIA GPU 加速"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    # 音视频处理
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2024.8.6",
    # PyTorch CUDA 12.1 (Tesla P4 兼容)
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "faster-whisper>=1.2.1",
    "stable-ts>=2.19.1",
    "funasr>=1.3.1",
    "modelscope>=1.35.3",
    "addict>=2.4.0",
]

[project.optional-dependencies]
# ASR 后端（按需安装）
vibevoice = ["transformers>=5.3.0", "accelerate>=0.20.0"]
whisper = ["faster-whisper>=1.1.0", "stable-ts>=2.17.0"]
funasr = ["funasr>=1.1.0", "modelscope>=1.9.0", "addict>=2.4.0"]
# 旧 Gradio 前端（可选保留）
gradio = ["gradio>=4.0"]
# 全部后端
all = ["video2text[vibevoice,whisper,funasr]"]

[project.scripts]
video2text = "fastapi_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backends", "core", "utils"]
include = [
    "main.py",
    "fastapi_app.py",
    "main.sh",
    ".env.example",
]

[tool.hatch.build.targets.sdist]
include = [
    "backends/**",
    "core/**",
    "utils/**",
    "main.py",
    "fastapi_app.py",
    "main.sh",
    "README.md",
    "pyproject.toml",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
